--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 {"@type":"WebSite","headline":"Juan Carlos Kuri Pinto","url":"https://jckuri.github.io/","name":"jckuri.github.io","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/assets/css/style.css?v=c489f259931a94eccf2c18be07d53f91098ffb6f">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
