--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 {"@type":"WebSite","headline":"Juan Carlos Kuri Pinto","url":"https://jckuri.github.io/","name":"jckuri.github.io","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
